<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                                                   android:layout_height="match_parent">


    <androidx.cardview.widget.CardView
            android:layout_width="400dp"
            android:layout_height="120dp" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="10dp" android:layout_marginTop="10dp" android:layout_marginEnd="10dp"
            android:background="@drawable/layout_bg">
        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <TextView
                    android:text="@string/departue"
                    android:layout_width="100dp"
                    android:layout_height="30dp" android:id="@+id/departue"
                    app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginTop="16dp" android:layout_marginStart="10dp" android:textSize="19sp"/>
            <TextView
                    android:layout_width="100dp"
                    android:layout_height="50dp" android:id="@+id/departueTime"
                    app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginTop="56dp" android:layout_marginStart="10dp" android:textSize="35sp"
                    android:gravity="center_vertical"/>
            <TextView
                    android:text="@string/time"
                    android:layout_width="130dp"
                    android:layout_height="30dp" android:id="@+id/time"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginTop="16dp" android:textSize="19sp"
                    app:layout_constraintEnd_toStartOf="@+id/arrival"
                    app:layout_constraintStart_toEndOf="@+id/departue"/>
            <TextView
                    android:layout_width="130dp"
                    android:layout_height="50dp" android:id="@+id/timeValue"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginTop="56dp" android:textSize="35sp"
                    android:gravity="center_vertical"
                    app:layout_constraintStart_toEndOf="@+id/departueTime"
                    app:layout_constraintEnd_toStartOf="@+id/arrivalTime"/>
            <TextView
                    android:text="@string/arrival"
                    android:layout_width="100dp"
                    android:layout_height="30dp" android:id="@+id/arrival"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginTop="16dp" android:textSize="19sp" android:layout_marginEnd="10dp"
                    app:layout_constraintEnd_toEndOf="parent"/>
            <TextView
                    android:layout_width="100dp"
                    android:layout_height="50dp" android:id="@+id/arrivalTime"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginTop="56dp" android:textSize="35sp"
                    android:gravity="center_vertical" android:layout_marginEnd="10dp"
                    app:layout_constraintEnd_toEndOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>