<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:map="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                                                   android:layout_height="match_parent" android:orientation="vertical"
                                                   android:id="@+id/constrant">

    <fragment
            android:layout_width="match_parent" android:layout_height="match_parent"
            android:id="@+id/map" android:name="com.google.android.gms.maps.SupportMapFragment"
            map:layout_constraintTop_toTopOf="parent" map:layout_constraintStart_toStartOf="parent"
            tools:layout="@layout/activity_maps" tools:ignore="FragmentTagUsage"/>
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent" android:layout_height="170dp"
            android:id="@+id/menu" map:layout_constraintTop_toTopOf="parent" android:layout_marginTop="10dp"
            android:layout_marginStart="5dp" map:layout_constraintStart_toEndOf="@+id/map"
            map:layout_constraintEnd_toStartOf="@+id/map" android:layout_marginEnd="5dp"
            android:background="#405CEF">
        <FrameLayout android:layout_width="match_parent" android:layout_height="50dp"
                     map:layout_constraintTop_toTopOf="parent" map:layout_constraintStart_toStartOf="parent"
                     map:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="25dp"
                     android:layout_marginStart="10dp" android:layout_marginEnd="10dp"
                     android:background="@color/white">
            <Spinner
                    android:layout_width="match_parent" android:id="@+id/from"
                    android:spinnerMode="dropdown" android:contentDescription="@string/from"
                    android:layout_height="match_parent" android:layout_marginStart="50dp"
                    android:text="@string/from"/>
            <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content"
                       android:src="@drawable/busstopblue_foreground" android:contentDescription="@string/from"
                       android:layout_marginStart="-30dp"/>
        </FrameLayout>

        <FrameLayout android:layout_width="match_parent" android:layout_height="50dp"
                     map:layout_constraintTop_toTopOf="parent" map:layout_constraintStart_toStartOf="parent"
                     map:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="95dp"
                     android:layout_marginStart="10dp" android:layout_marginEnd="10dp"
                     android:background="@color/white">
            <Spinner
                    android:layout_width="match_parent" android:id="@+id/to"
                    android:spinnerMode="dropdown" android:contentDescription="@string/to"
                    android:layout_height="match_parent" android:layout_marginStart="50dp"/>
            <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content"
                       android:src="@drawable/busstopgreen_foreground" android:contentDescription="@string/to"
                       android:layout_marginStart="-30dp"/>
        </FrameLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
    <ImageButton
            android:id="@+id/check" android:layout_width="75dp"
            android:layout_height="75dp" map:layout_constraintEnd_toEndOf="parent"
            map:layout_constraintTop_toTopOf="parent" android:layout_marginTop="170dp"
            android:src="@drawable/check_foreground" android:background="@android:color/transparent"
            android:contentDescription="@string/check"/>
</androidx.constraintlayout.widget.ConstraintLayout>




